<resources>
    <!-- Activities Titles -->
    <string name="app_name">Book Store App Stage 2</string>
    <string name="catalog_activity_name">Books Catalog</string>
    <string name="Book_details_activity_name">Book Details</string>
    <string name="edit_activity_name">Edit Book Info</string>
    <string name="add_book_activity_name">Add new Book</string>

    <!-- Empty View Titles -->
    <string name="empty_view_title_text">You do not have any books yet ...</string>
    <string name="empty_view_subtitle_text">Get started by adding a book\nusing Float button below</string>

    <!-- Options Menu Titles -->
    <string name="action_delete_all_entries">Delete all Books</string>
    <string name="action_save_book">Save Book</string>
    <string name="action_delete_book">Delete Book</string>

    <!-- EditTexts Hints -->
    <string name="edit_book_name">Book Name</string>
    <string name="edit_book_price">Price</string>
    <string name="edit_book_quantity">Quantity</string>
    <string name="edit_supplier_name">Supplier Name</string>
    <string name="edit_supplier_phone">Supplier Phone Number</string>

    <!-- list_item view Labels -->
    <string name="item_book_name">Name: </string>
    <string name="item_book_price">Price: </string>
    <string name="item_book_quantity">Quantity: </string>
    <string name="item_sale_button">Sale</string>

    <!-- BookDetailsActivity Labels -->
    <string name="details_book_name">Book Name: </string>
    <string name="details_book_price">Price: </string>
    <string name="details_book_quantity">Quantity: </string>
    <string name="details_supplier_name">Supplier Name: </string>
    <string name="details_supplier_phone">Supplier Tel: </string>
    <string name="content_description">Image Button</string>

    <!-- Toast Messages -->
    <string name="fill_all_data_message">Please fill all the data</string>
    <string name="all_books_deleted">All Books deleted</string>
    <string name="delete_book_failed">Delete Book failed</string>
    <string name="delete_book_successful">Delete Book successful</string>
    <string name="insert_book_successful">Book saved</string>
    <string name="insert_book_failed">Error with saving Book</string>
    <string name="update_book_successful">Book Info Updated</string>
    <string name="update_book_failed">Error with updating Book Info</string>
    <string name="update_quantity_successful">Quantity updated</string>
    <string name="update_quantity_failed">Quantity update failed</string>
    <string name="negative_quantity_alert">Quantity can not be less than zero</string>

    <!-- AlertDialogs Messages -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_all_confirm_dialog_msg">Do you want to delete all Books?</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_confirm_dialog_msg">Do you want to delete the Book?</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="dollar">Dollar</string>
</resources>
