<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mainLayoutStyle"
    android:orientation="vertical"
    tools:context=".EditActivity">

    <LinearLayout style="@style/editLine">
        <TextView
            style="@style/editColumns"
            android:text="@string/details_book_name" />
        <EditText
            android:id="@+id/book_name_edit"
            style="@style/edit_editTexts"
            android:hint="@string/edit_book_name"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout style="@style/editLine">
        <TextView
            style="@style/editColumns"
            android:text="@string/details_book_price" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/book_price_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="6"
                android:hint="@string/edit_book_price"
                android:inputType="numberDecimal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollar" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/editLine">
        <TextView
            style="@style/editColumns"
            android:text="@string/details_book_quantity" />
        <EditText
            android:id="@+id/book_quantity_edit"
            style="@style/edit_editTexts"
            android:maxLength="6"
            android:hint="@string/edit_book_quantity"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout style="@style/editLine">
        <TextView
            style="@style/editColumns"
            android:text="@string/details_supplier_name" />
        <EditText
            android:id="@+id/supplier_name_edit"
            style="@style/edit_editTexts"
            android:hint="@string/edit_supplier_name"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout style="@style/editLine">
        <TextView
            style="@style/editColumns"
            android:text="@string/details_supplier_phone" />
        <EditText
            android:id="@+id/supplier_phone_edit"
            style="@style/edit_editTexts"
            android:maxLength="16"
            android:hint="@string/edit_supplier_phone"
            android:inputType="number" />
    </LinearLayout>
</LinearLayout>