<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/listItemMainLayout">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout style="@style/listItemLines">
            <TextView
                style="@style/listItemColumnText"
                android:text="@string/item_book_name" />
            <TextView
                android:id="@+id/book_name"
                style="@style/listItemValues"
                tools:text="Book" />
        </LinearLayout>

        <LinearLayout style="@style/listItemLines">
            <TextView
                style="@style/listItemColumnText"
                android:text="@string/item_book_price" />
            <TextView
                android:id="@+id/book_price"
                style="@style/listItemValues"
                tools:text="0" />
        </LinearLayout>

        <LinearLayout style="@style/listItemLines">
            <TextView
                style="@style/listItemColumnText"
                android:text="@string/item_book_quantity" />
            <TextView
                android:id="@+id/book_quantity"
                style="@style/listItemValues"
                tools:text="0" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/sale_button"
        style="@style/listItemButtons"
        android:text="@string/item_sale_button" />
</LinearLayout>