<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mainLayoutStyle"
    android:padding="@dimen/padding8dp"
    tools:context=".CatalogActivity">

    <ListView
        android:id="@+id/catalog_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_white_24dp" />

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <ImageView
            android:id="@+id/no_books_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/content_description"
            android:src="@drawable/no_books" />
        <TextView
            android:id="@+id/empty_title_text"
            style="@style/emptyViewText1"
            android:text="@string/empty_view_title_text" />
        <TextView
            android:id="@+id/empty_subtitle_text"
            style="@style/emptyViewText2"
            android:text="@string/empty_view_subtitle_text" />
    </RelativeLayout>
</RelativeLayout>