<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mainLayoutStyle"
    tools:context=".BookDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/detailsRow">
            <TextView
                style="@style/detailsColumnName"
                android:text="@string/details_book_name"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/book_name_view"
                style="@style/detailsValues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="@dimen/edit_text_margin"
                tools:text="Book Name" />
        </LinearLayout>

        <LinearLayout style="@style/detailsRow">
            <TextView
                style="@style/detailsColumnName"
                android:text="@string/details_book_price"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/book_price_view"
                    style="@style/detailsValues"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/edit_text_margin"
                    tools:text="15" />
                <TextView
                    style="@style/detailsValues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="80dp"
                    android:text="@string/dollar"
                    tools:text="Dollar" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/detailsRow">
            <TextView
                style="@style/detailsColumnName"
                android:text="@string/details_book_quantity"
                android:textSize="16sp" />
            <LinearLayout style="@style/detailsValuesLayouts">
                <ImageButton
                    android:id="@+id/decrement_quantity_button"
                    android:layout_marginStart="@dimen/edit_text_margin"
                    android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
                    style="@style/detailsImageButtons" />
                <TextView
                    android:id="@+id/book_quantity_view"
                    style="@style/detailsValues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    tools:text="1" />
                <ImageButton
                    android:id="@+id/increment_quantity_button"
                    style="@style/detailsImageButtons"
                    android:src="@drawable/ic_keyboard_arrow_up_black_24dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/detailsRow">
            <TextView
                style="@style/detailsColumnName"
                android:text="@string/details_supplier_name"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/supplier_name_view"
                style="@style/detailsValues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="@dimen/edit_text_margin"
                tools:text="Supplier Name" />
        </LinearLayout>

        <LinearLayout style="@style/detailsRow">
            <TextView
                style="@style/detailsColumnName"
                android:text="@string/details_supplier_phone"
                android:textSize="16sp" />
            <LinearLayout style="@style/detailsValuesLayouts">
                <ImageButton
                    android:id="@+id/call_button"
                    style="@style/detailsImageButtons"
                    android:layout_marginStart="@dimen/edit_text_margin"
                    android:src="@drawable/ic_call_black_24dp" />
                <TextView
                    android:id="@+id/supplier_phone_view"
                    style="@style/detailsValues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/edit_text_margin"
                    tools:text="004915788654" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_mode_edit_white_24dp" />
</RelativeLayout>